--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple BMI Calculator</title>
+    <title>BMI Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      sizes="32x32"
+      href="images/icons/bmilogo.png"
+    />
     <script src="app.js"></script>
   </head>
   <body>
